# cassandra-analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  cassandra-analyzer.spec  cassandra_analyzer_main.py  example_config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-packages.yml  ci.yml  cla.yml  release.yml
cassandra_analyzer/: __init__.py  __main__.py  analyzer.py  config.py
cassandra_analyzer/analyzers/: __init__.py  base.py  configuration.py  datamodel.py  extended_configuration.py  infrastructure.py  operations.py  operations_logs.py  security.py  table_analyzer.py
cassandra_analyzer/client/: __init__.py  axonops_client.py  exceptions.py
cassandra_analyzer/collectors/: __init__.py  cluster_collector.py
cassandra_analyzer/models/: __init__.py  cluster.py  metrics.py  recommendations.py  table_parser.py
cassandra_analyzer/reports/: __init__.py  generator.py  generator_enhanced.py  pdf_generator.py  report_examples.md
cassandra_analyzer/reports/templates/: configuration.md  datamodel.md  infrastructure.md  operations.md  security.md
cassandra_analyzer/utils/: __init__.py  config_parser.py  gc_metric_selector.py
scripts/: add_license_headers.py  test.sh
tests/: __init__.py  conftest.py  test_analyzer.py  test_axonops_client.py  test_configuration_analyzer.py  test_datamodel_analyzer.py  test_infrastructure_analyzer.py  test_operations_analyzer.py  test_pdf_generator.py  test_security_analyzer.py  test_simple.py  utils.py
