[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cassandra-axonops-analyzer"
version = "0.1.0"
description = "Comprehensive Cassandra cluster analysis tool powered by AxonOps"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AxonOps Team", email = "support@axonops.com"},
]
maintainers = [
    {name = "AxonOps Team", email = "support@axonops.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Topic :: Database",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["cassandra", "monitoring", "analysis", "axonops", "diagnostics"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.8.0",
    "structlog>=23.1.0",
    "rich>=13.4.0",
]

[project.urls]
Homepage = "https://github.com/axonops/cassandra-analyzer"
Documentation = "https://github.com/axonops/cassandra-analyzer#readme"
Issues = "https://github.com/axonops/cassandra-analyzer/issues"
Source = "https://github.com/axonops/cassandra-analyzer"

[project.scripts]
cassandra-analyzer = "cassandra_analyzer.__main__:main"

[project.optional-dependencies]
pdf = [
    "weasyprint>=59.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "pytest-timeout>=2.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "bandit>=1.7.5",
    "pre-commit>=3.3.3",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
]

[tool.setuptools.packages.find]
include = ["cassandra_analyzer*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
cassandra_analyzer = ["templates/*.j2", "config/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "."
]

[tool.coverage.run]
source = ["cassandra_analyzer"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert_used test